--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,5 +1,7 @@
 @import 'tailwindcss';
-@import "tw-animate-css";
+@import 'tw-animate-css';
+@import 'material-symbols';
+@config "../tailwind.config.ts";
 
 @custom-variant dark (&:is(.dark *));
 
